cluster/apps/home/pihole-hue-bridge/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-hue-bridge
  namespace: home
  labels:
    app: pihole-hue-bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole-hue-bridge
  template:
    metadata:
      labels:
        app: pihole-hue-bridge
    spec:
      hostNetwork: true
      nodeName: k8s2
      containers:
        - name: pihole-hue-bridge
          image: linuxserver/habridge:5.4.1
          ports:
            - containerPort: 80
            - containerPort: 50000
              protocol: UDP
            - containerPort: 1900
              protocol: UDP
          volumeMounts:
            - mountPath: /config
              name: config
            - name: config-file
              mountPath: /config/ha-bridge.config
              subPath: ha-bridge.config
      volumes:
        - name: config-file
          configMap:
            name: ha-bridge-config
        - name: config
          persistentVolumeClaim:
            claimName: pihole-hue-bridge-config
